solved layout problem fixed #1

--- a/admin.css
+++ b/admin.css
@@ -9,7 +9,7 @@ html,body{
     background-color: rgba(255, 255, 255, 0.829);
 }
 #mainsquare{
-    border: 1px solid red;
+    border: 1px solid rgb(214, 214, 214);
     width: 50%;
     height: 50%;
 }
